1.2.0
-----
 1. Draw etch effect on radios if using a button effect, and not using button-like
    check/radios.
 2. If drawing square non-gtk style scrollviews, use a dark/light borders.
 3. If drawing square scrollviews, set frame width to 1 if using thin scrollbar
    groove.
 4. Add options to draw square progress and entry fields when rounding.
 5. Add option to control whether progressbars have a border or not.
 6. Improve appearance of button style check and radio buttons.
 7. Add option to control whether scrollbar groove has a border or not.
 8. Dont use pixmaps to draw rounded slider, or radio buttons.
 9. Add option to increase size of check/radios - default is now 15pixels.
10. Really fix Qt only compile.
11. Increase default shadow sizes.
12. If using gtk style combos and bordering menu items, increase frame width by
    1 pixel.
13. Remove border from preview colour square in KDE colour selection dialog.
14. Only offset vertical position of etch text.

1.1.1
-----
1. Alter alpha settings of square rings.
2. Fix Qt only compile.
3. Fix painting of MDI titlebar texts.
4. Fix right border of MDI windows when rounded.

1.1.0
-----
 1. Add option to not embolden progressbar text.
 2. Add option to allow coloured mouse over for toolbar buttons.
 3. Add option to border selection.
 4. Add option to draw square rings on background.
 5. Under KDE SC >= 4.3, use alpha blending for window borders.
 6. Implement coloured shadows - code taken from Oxygen window decoration
    (but slightly modified)
 7. Add support for window grouping with KDE SC >= 4.4.
 8. In Arora, if using thin scrollbar grooves, fill background of scrolbars
    in 'WebView' with standard background colour.
 9. When drawing focus, attempt to determine if this is in a KpageListView.
10. Increase tabbar tab size so as to allow more space around icons.
11. Fix clipping issues when drawing combos with a coloured area under arrow
    (sometimes arrows would not be redrawn).